--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,24 @@ h1 {
 p {
     font-size: 20px;
 }
+
+.categoia-vidios {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria{
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+.categoia-vidiosimg{
+    opacity: 0.5;
+    height: 200px;
+}
+.categoria-vidiosimg:haver {
+    opa
+}
