--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
@@ -32,29 +33,28 @@ p {
     font-size: 20px;
 }
 
-.categoia-vidios {
+.categoria-videos {
     display: flex;
     overflow-x: auto;
     gap: 10px;
 }
 
-.categoria{
+.categoria {
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 50px;
-
 }
 
-.categoia-vidios img{
+.categoria-videos img {
     opacity: 0.5;
     height: 200px;
 }
 
-.categoria-vidios img:hover {
+.categoria-videos img:hover {
     opacity: 1.0;
     border: 3px solid green;
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228)
+    color: rgb(42, 122, 228);
 }
